# linbox

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  docker-compose.yml
cmake/: testing.cmake
docker/: Dockerfile.controller  Dockerfile.pg-sandbox  Dockerfile.sandbox  seccomp-profile.json
docker/pg/: entrypoint.sh
docs/: README.md  architecture.md  env.md  project-structure.md  verification-pipeline.md
docs/adr/: 001-dual-layer-interception.md  002-shm-seqlock-time.md  003-chacha20-prng.md  004-seccomp-ret-trap.md  005-block-io-uring.md  006-sbp-protocol.md  007-namespaces-isolation.md  008-cputime-model.md  009-c-language-shim.md  010-tc-netem-network.md  011-graceful-degradation.md  012-docker-runtime.md  README.md
docs/gaps/: README.md  arm64-support.md  fuse-performance.md  macos-dev-support.md  multi-process-time-consistency.md  rdtsc-hardware.md  sbp-protocol-spec.md  snapshot-restore.md  thread-scheduling-determinism.md  virtual-timer-queue.md
rnd/: README.md
rnd/boxing/: README.md  deterministic-systems.md  ld-preload.md  linux-sandbox.md  sandbox-alternatives.md  seccomp-ptrace.md
rnd/testing/: README.md  strategy.md
scripts/: run-sandbox.sh  setup-linux.sh
src/common/: sbp.c  sbp.h  sbp.test.c  shm-layout.h  shm.c  shm.test.c
src/controller/: main.c  time-manager.c  time-manager.h
src/shim/: linbox.c  linbox.h  linbox.preload.c  linbox.test.c  prng.c  prng.h  prng.test.c  process.c  process.preload.c  random.c  random.preload.c  resolve.h  seccomp-helper.c  seccomp.c  sigsys.c  syscall-raw.c  syscall-raw.h  syscall-wrap.c  time.c
tests/e2e/: docker-smoke.sh  lib.sh  linboxctl.py  pg-determinism.sh  pg-random.sh  pg-time.sh  run-all.sh
tests/pseudo-box/: README.md  failure-fallback.sh  random-repeatability.sh  repeatability.sh  run-all.sh  seccomp-direct-syscalls.sh  time-lifecycle.sh
work/: README.md  board.md
work/E01-proto/: epic.md
work/E01-proto/S01-time-interception/: story.md
work/E01-proto/S02-controller-sbp/: story.md
work/E01-proto/S03-random/: story.md
work/E01-proto/S04-seccomp/: story.md
work/E01-proto/S05-multiprocess/: story.md
work/E01-proto/S06-container-e2e/: story.md
work/E01-proto/S07-timers/: story.md
work/E01-proto/S08-network/: story.md
work/E01-proto/S09-netem/: story.md
work/E01-proto/S10-filesystem/: story.md
work/E01-proto/S11-signals/: story.md
work/E01-proto/S12-unotify/: story.md
work/E01-proto/S13-misc/: story.md
work/E01-proto/S14-protocol/: story.md
work/E01-proto/S15-snapshot/: story.md
work/E01-proto/S16-observability/: story.md
work/R01-boxing/: research.md
(+23 files in other folders)
